--- a/app/src/index.css
+++ b/app/src/index.css
@@ -29,7 +29,7 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   overflow: hidden;
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
